add some template

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS src/app_main.cpp
+idf_component_register(SRCS src/app_main.cpp src/wlan_manager.cpp src/utils.cpp
         INCLUDE_DIRS include)
 # https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-guides/cplusplus.html
 # C++23
